--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,111 +11,107 @@
 <body>
     <header>
         <nav>
+            <a href="index.html">WebStudio</a>
             <ul>
-                <li><a href="">WEBSTUDIO</a></li>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
+        </nav>
                 <address>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </address>
-        </nav>
         
-        </header>
-        <main> 
-            <h1>
-                Effective Solutions
-                for Your Business
-            </h1>
+    </header>
+<main> 
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
+
+            <h2>webstudio</h2>
             <ul>
                 <li>
-                <h2>Strategy</h2>
+                 <h3>Strategy</h3>
             <p>
                 Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.
             </p>
                 </li>
                 <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
             </p>
                 </li>
                 <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
                 Research and confirm brands with the strongest digital growth opportunities and minimize risk.
             </p>
                 </li>
            <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
             </p>
                 </li>
             </ul>
+
             <h2>
                 Our Team
             </h2>
             <ul>
                 <li>
                 <img 
-                    src="./images/img(3)-min.png" 
+                    src="./images/img1.jpg" 
                     alt="Mark Guerrero" 
                     width="264"
-                    height="260"
-                />
+                    />
                 <h3>Mark Guerrero</h3>
                 <p>
                     Product Designer
                 </p>
-                </li>
-                <li>
+                    </li>
+                    <li>
                 <img 
-                    src="./images/img-min.png" 
+                    src="./images/img2.jpg" 
                     alt="Tom Ford" 
                     width="264"
-                    height="260"
                      />
-                     <h3>Tom Ford</h3>
-                     <p>
-                        Frontend Developer
-                     </p>
+                <h3>Tom Ford</h3>
+                <p>
+                    Frontend Developer
+                </p>
                      </li>
                      <li>
                 <img 
-                    src="./images/img(1)-min.png" 
+                    src="./images/img3.jpg" 
                     alt="Camila Garcia"
                     width="264"
-                    height="260"
                     />
-                    <h3>Camila Garcia</h3>
-                    <p>
-                        Marketing
-                    </p>
+                <h3>Camila Garcia</h3>
+                <p>
+                    Marketing
+                </p>
                     </li>
                     <li>
                 <img
-                    src="./images/img(2)-min.png"
+                    src="./images/img4.jpg"
                     alt="Daniel Wilson"
                     width="264"
-                    height="260"
                     />
-                    <h3>Daniel Wilson</h3>
-                    <p>
-                        UI Designer
-                    </p>
+                <h3>Daniel Wilson</h3>
+                <p>
+                    UI Designer
+                </p>
                     </li>
             </ul>
-            </main>
-            <footer>
-                <h3>WEBSTUDIO</h3>
-                <p>
-                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-                </p>
-                </footer>
+</main>
+        <footer>
+            <a href="index.html">WebStudio</a>
+            <p>
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </footer>
 </body>
 </html>
