--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,25 +9,41 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-                <address>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </address>
+            <nav>
+                <a href="index.html">WebStudio
+                        <img 
+                            src="./images/Web.jpg" 
+                            alt="Web" 
+                            width="44"
+                            height="21" 
+                            />
+                        <img 
+                            src="./images/Studio.jpg" 
+                            alt="Studio" 
+                            width="71" 
+                            height="21"
+                            />
+                 </a>
+                <ul>
+                    <li><a href="">Studio</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+            </nav>         
+        <address>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
         
     </header>
 <main> 
+    <selection>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
+    </selection>
 
-            <h2>webstudio</h2>
+    <selection>
+        <!-- <h2>webstudio</h2>--> 
             <ul>
                 <li>
                  <h3>Strategy</h3>
@@ -56,7 +71,9 @@
             </p>
                 </li>
             </ul>
+    </selection>
 
+        <selection>
             <h2>
                 Our Team
             </h2>
@@ -66,6 +83,7 @@
                     src="./images/img1.jpg" 
                     alt="Mark Guerrero" 
                     width="264"
+                    height="260"
                     />
                 <h3>Mark Guerrero</h3>
                 <p>
@@ -77,6 +95,7 @@
                     src="./images/img2.jpg" 
                     alt="Tom Ford" 
                     width="264"
+                    height="260"
                      />
                 <h3>Tom Ford</h3>
                 <p>
@@ -88,6 +107,7 @@
                     src="./images/img3.jpg" 
                     alt="Camila Garcia"
                     width="264"
+                    height="260"
                     />
                 <h3>Camila Garcia</h3>
                 <p>
@@ -99,6 +119,7 @@
                     src="./images/img4.jpg"
                     alt="Daniel Wilson"
                     width="264"
+                    height="260"
                     />
                 <h3>Daniel Wilson</h3>
                 <p>
@@ -106,12 +127,24 @@
                 </p>
                     </li>
             </ul>
+        </selection>
 </main>
         <footer>
-            <a href="index.html">WebStudio</a>
-            <p>
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <a href="index.html">WebStudio
+                    <img 
+                    src="./images/Web.jpg" 
+                    alt="Web" 
+                    width="44"
+                    />
+                    <img
+                        src="./images/Studio.jpg"
+                        alt="Studio"
+                        width="71"
+                        />
+            </a>
+                <p>
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
         </footer>
 </body>
 </html>
