--- a/index.html
+++ b/index.html
@@ -10,20 +10,7 @@
 <body>
     <header>
             <nav>
-                <a href="index.html">WebStudio
-                        <img 
-                            src="./images/Web.jpg" 
-                            alt="Web" 
-                            width="44"
-                            height="21" 
-                            />
-                        <img 
-                            src="./images/Studio.jpg" 
-                            alt="Studio" 
-                            width="71" 
-                            height="21"
-                            />
-                 </a>
+                <a href="index.html">WebStudio </a>
                 <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
@@ -31,18 +18,24 @@
                 </ul>
             </nav>         
         <address>
+            <ul>
+                <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
                 <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
         
     </header>
 <main> 
-    <selection>
+    <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-    </selection>
+    </section>
 
-    <selection>
+    <section>
         <!-- <h2>webstudio</h2>--> 
             <ul>
                 <li>
@@ -71,12 +64,10 @@
             </p>
                 </li>
             </ul>
-    </selection>
+    </section>
 
-        <selection>
-            <h2>
-                Our Team
-            </h2>
+        <section>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                 <img 
@@ -127,21 +118,10 @@
                 </p>
                     </li>
             </ul>
-        </selection>
+        </section>
 </main>
         <footer>
-            <a href="index.html">WebStudio
-                    <img 
-                    src="./images/Web.jpg" 
-                    alt="Web" 
-                    width="44"
-                    />
-                    <img
-                        src="./images/Studio.jpg"
-                        alt="Studio"
-                        width="71"
-                        />
-            </a>
+            <a href="index.html">WebStudio </a>
                 <p>
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
