--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <nav>
-                <a href="index.html">WebStudio </a>
+                <a href="./index.html">WebStudio </a>
                 <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
@@ -19,24 +19,18 @@
             </nav>         
         <address>
             <ul>
-                <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        
     </header>
 <main> 
     <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
     </section>
-
     <section>
-        <!-- <h2>webstudio</h2>--> 
+        <h2 hidden>WebStudio</h2>
             <ul>
                 <li>
                  <h3>Strategy</h3>
@@ -65,7 +59,6 @@
                 </li>
             </ul>
     </section>
-
         <section>
             <h2>Our Team</h2>
             <ul>
@@ -77,9 +70,7 @@
                     height="260"
                     />
                 <h3>Mark Guerrero</h3>
-                <p>
-                    Product Designer
-                </p>
+                <p>Product Designer</p>
                     </li>
                     <li>
                 <img 
@@ -89,9 +80,7 @@
                     height="260"
                      />
                 <h3>Tom Ford</h3>
-                <p>
-                    Frontend Developer
-                </p>
+                <p>Frontend Developer</p>
                      </li>
                      <li>
                 <img 
@@ -101,9 +90,7 @@
                     height="260"
                     />
                 <h3>Camila Garcia</h3>
-                <p>
-                    Marketing
-                </p>
+                <p>Marketing</p>
                     </li>
                     <li>
                 <img
@@ -113,15 +100,13 @@
                     height="260"
                     />
                 <h3>Daniel Wilson</h3>
-                <p>
-                    UI Designer
-                </p>
+                <p>UI Designer</p>
                     </li>
             </ul>
         </section>
 </main>
         <footer>
-            <a href="index.html">WebStudio </a>
+            <a href="./index.html">WebStudio </a>
                 <p>
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
