--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <nav>
-                <a href="./index.html">WebStudio </a>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
@@ -30,7 +30,7 @@
             <button type="button">Order Service</button>
     </section>
     <section>
-        <h2 hidden>WebStudio</h2>
+        <h2>WebStudio</h2>
             <ul>
                 <li>
                  <h3>Strategy</h3>
@@ -106,7 +106,7 @@
         </section>
 </main>
         <footer>
-            <a href="./index.html">WebStudio </a>
+            <a href="./index.html">WebStudio</a>
                 <p>
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
