--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul>
                 <li>
                 <img 
-                    src="../images/img1.jpg" 
+                    src="../../images/img1.jpg" 
                     alt="Mark Guerrero" 
                     width="264"
                     height="260"
@@ -74,7 +74,7 @@
                     </li>
                     <li>
                 <img 
-                    src="../images/img2.jpg" 
+                    src="../../images/img2.jpg" 
                     alt="Tom Ford" 
                     width="264"
                     height="260"
@@ -84,7 +84,7 @@
                      </li>
                      <li>
                 <img 
-                    src="../images/img3.jpg" 
+                    src="../../images/img3.jpg" 
                     alt="Camila Garcia"
                     width="264"
                     height="260"
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                 <img
-                    src="../images/img4.jpg"
+                    src="../../images/img4.jpg"
                     alt="Daniel Wilson"
                     width="264"
                     height="260"
